--- a/TASK-1.html
+++ b/TASK-1.html
@@ -164,5 +164,10 @@
     <p>&copy; 2025 Learn AI Today. All rights reserved.</p>
   </footer>
 
+  <script>
+    document.querySelector('.btn').addEventListener('click', function() {
+      window.open('https://www.youtube.com/results?search_query=artificial+intelligence', '_blank');
+    });
+  </script>
 </body>
 </html>
