--- a/TASK-1.html
+++ b/TASK-1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Learn AI Today</title>
   <style>
     * {
@@ -166,7 +166,7 @@
 
   <script>
     document.querySelector('.btn').addEventListener('click', function() {
-      window.open('https://www.youtube.com/results?search_query=artificial+intelligence', '_blank');
+      window.open('https://www.geeksforgeeks.org/artificial-intelligence/', '_blank');
     });
   </script>
 </body>
